feat: add Angular environment variables

--- a/examples/angular/src/app/pages/pages.component.html
+++ b/examples/angular/src/app/pages/pages.component.html
@@ -7,7 +7,9 @@
         </app-header>
     }
     
-    <dotcms-layout [entity]="pageAsset" [components]="components()" />
+    <main class="container flex flex-col gap-8 m-auto">
+        <dotcms-layout [entity]="pageAsset" [components]="components()" />
+    </main>
     
     @if(pageAsset.layout.footer) {
         <app-footer />
