--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.scss
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.scss
@@ -24,12 +24,12 @@
     }
 }
 
-.languages-list__header {
+.locales-list__header {
     display: flex;
     justify-content: space-between;
     margin-bottom: $spacing-1;
 }
 
-.languages-list__search {
+.locales-list__search {
     width: 405px;
 }
