--- a/core-web/libs/block-editor/src/lib/extensions/ai-content-prompt/ai-content-prompt.component.scss
+++ b/core-web/libs/block-editor/src/lib/extensions/ai-content-prompt/ai-content-prompt.component.scss
@@ -33,10 +33,15 @@ form {
     flex-direction: column;
     position: relative;
 
+    .p-inputtext.p-inputtextarea {
+        padding: $spacing-1 $spacing-5 $spacing-1 $spacing-1;
+        min-height: $spacing-8;
+    }
+
     dot-copy-button {
         position: absolute;
         right: $spacing-3;
-        bottom: $spacing-0;
+        bottom: $spacing-1;
     }
 }
 
