--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
@@ -10,6 +10,7 @@
         </span>
         <button
             [label]="'locales.add.locale' | dm"
+            (click)="store.loadDialog()"
             pButton
             type="button"
             icon="pi pi-plus"></button>
