--- a/core-web/libs/dotcms-scss/jsp/css/dotcms.css
+++ b/core-web/libs/dotcms-scss/jsp/css/dotcms.css
@@ -3768,6 +3768,8 @@
     font-family: Assistant, 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
     padding: 0.5rem;
     font-size: 1rem;
+    min-height: 9.375rem;
+    resize: vertical;
 }
 .dijitTextAreaHover {
     background-color: #ffffff;
@@ -5518,13 +5520,18 @@
     margin-top: 0.5rem;
 }
 .dijitComboBoxMenuPopup .dijitMenuItem {
+    padding: 0 0.75rem;
+    color: #14151a;
+    height: 2.5rem;
+}
+.dijitComboBoxMenuPopup .dijitMenuItem .dijitComboBoxHighlightMatch {
+    font-weight: 700;
+}
+.dijitComboBoxMenuPopup .dijitMenuItem:has(small) {
     display: flex;
     align-items: start;
     flex-direction: column;
     justify-content: center;
-    padding: 0 0.75rem;
-    color: #14151a;
-    height: 2.5rem;
 }
 .dijitComboBoxMenuPopup .dijitComboBoxMenu {
     min-width: 200px;
