--- a/core-web/libs/dotcms-scss/jsp/scss/dijit/form/_textArea.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/dijit/form/_textArea.scss
@@ -5,6 +5,8 @@
     font-family: $font-default;
     padding: $field-padding;
     font-size: $font-size-md;
+    min-height: 9.375rem;
+    resize: vertical;
 
     &Hover {
         background-color: $textarea-hover-bgcolor;
