implementation (language actions): progress - delete - push publish - set default

--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
@@ -53,3 +53,6 @@
         </ng-template>
     </p-table>
 </ng-container>
+
+<p-confirmDialog [key]="dialogKey" [style]="{ width: '30vw' }" />
+<p-toast></p-toast>
