implementation (language actions): tests

--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
@@ -6,6 +6,7 @@
                 class="locales-list__search"
                 (input)="dt.filterGlobal($event.target.value, 'contains')"
                 type="text"
+                data-testId="input-search"
                 pInputText />
         </span>
         <button
