WIP: support to checkboxes for TreeSelect Compoment and avoid hardcoded vars in scss #28368

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_tree.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_tree.scss
@@ -9,7 +9,7 @@
 }
 
 .p-tree .p-tree-container .p-treenode {
-    padding: 0.25rem;
+    padding: $spacing-0;
 }
 
 .p-tree .p-tree-container .p-treenode .p-treenode-content {
