--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_treeselect.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_treeselect.scss
@@ -34,12 +34,7 @@
 }
 
 .p-treeselect.p-treeselect-chip .p-treeselect-token {
-    padding: 0.375rem $spacing-1;
-    margin-right: $spacing-1;
-    background: $color-palette-primary-200;
-    border-radius: $border-radius-sm;
-    color: $color-palette-primary;
-    font-size: $font-size-sm;
+    @extend #field-chip-token;
 }
 
 .p-treeselect .p-treeselect-trigger {
