--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/common.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/common.scss
@@ -161,3 +161,12 @@ $select-border-size: 2px;
     justify-content: center;
     gap: $spacing-0;
 }
+
+#field-chip-token {
+    padding: 0.375rem $spacing-2;
+    margin-right: $spacing-1;
+    background: $bg-highlight;
+    color: $color-palette-primary;
+    border-radius: $border-radius-xs;
+    font-size: $font-size-sm;
+}
