chore: add new type for host_folder type

--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.html
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.html
@@ -82,6 +82,9 @@
             [field]="field"
             [attr.data-testId]="'field-' + field.variable" />
     }
+    @case (fieldTypes.HOST_FOLDER) {
+        <p>Hello</p>
+    }
 }
 @if (field.hint) {
     <small [attr.data-testId]="'hint-' + field.variable">{{ field.hint }}</small>
