chore: create new component for host folder field

--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.html
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.html
@@ -83,7 +83,9 @@
             [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.HOST_FOLDER) {
-        <p>Hello</p>
+        <dot-edit-content-host-folder-field
+            [field]="field"
+            [attr.data-testId]="'field-' + field.variable" />
     }
 }
 @if (field.hint) {
