chore: add mock field

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -1,6 +1,6 @@
 <p-treeSelect
     [formControlName]="field.variable"
-    [options]="options"
+    [options]="options()"
     [attr.aria-labelledby]="'field-' + field.variable"
     optionLabel="label"
     optionValue="value" />
