implementation (Languages): #28476 Support the different Menu actions in the table.  (#28669)
### Proposed Changes
* add the menu options to the locale table and the confirmation
messages.
* Push Publish 
* Set As Default 
* Delete 


### Screenshots


https://github.com/dotCMS/core/assets/31667212/646d62f0-b6d3-4f8d-b9e4-173e955160b8

--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
@@ -6,6 +6,7 @@
                 class="locales-list__search"
                 (input)="dt.filterGlobal($event.target.value, 'contains')"
                 type="text"
+                data-testId="input-search"
                 pInputText />
         </span>
         <button
@@ -53,3 +54,6 @@
         </ng-template>
     </p-table>
 </ng-container>
+
+<p-confirmDialog [key]="dialogKey" [style]="{ width: '30vw' }" />
+<p-toast></p-toast>
