feat(edit-content) add category field #28658

--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.scss
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.scss
@@ -1,5 +1,12 @@
+@use "variables" as *;
+
 :host {
     display: block;
     height: fit-content;
     margin-bottom: 0;
+
+    small {
+        margin-top: $spacing-1;
+        display: block;
+    }
 }
