chore(edit-content): creating init setup for unit test with the new site /folder field #28645

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -2,5 +2,12 @@
     [formControlName]="field.variable"
     [options]="options()"
     [attr.aria-labelledby]="'field-' + field.variable"
+    [filter]="true"
+    [filterInputAutoFocus]="true"
     optionLabel="label"
-    optionValue="value" />
+    optionValue="value"
+    (onNodeSelect)="onNodeSelect($event)">
+    <ng-template let-node pTemplate="default">
+        <span>{{ node.label | truncatePath }}</span>
+    </ng-template>
+</p-treeSelect>
