fix(UVE): Copy URL Button Not Working Properly (#28705)
### Proposed Changes
* Clicking the “Copy URL” button to copy the URL to the clipboard

### Video

#### VTL Page


https://github.com/dotCMS/core/assets/72418962/7959ad28-e6a8-4a03-bc4d-ddcb7aca7300

#### Headless


https://github.com/dotCMS/core/assets/72418962/c6000f68-3ccf-4e89-be7b-437fc34d69a8

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
@@ -31,7 +31,7 @@
 
             <dot-ema-bookmarks [url]="es.favoritePageURL" />
             <p-button
-                [cdkCopyToClipboard]="es.iframeURL"
+                [cdkCopyToClipboard]="es.pureURL"
                 [label]="'editpage.header.copy' | dm"
                 (cdkCopyToClipboardCopied)="triggerCopyToast()"
                 icon="pi pi-copy"
