implementation (add /edit language): initial progress

--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
@@ -11,6 +11,7 @@
         </span>
         <button
             [label]="'locales.add.locale' | dm"
+            (click)="store.openAddEditDialog()"
             pButton
             type="button"
             icon="pi pi-plus"></button>
